<resources>
    <string name="app_name">splashEma</string>
    <string name="usuario_label">Usuario</string>
    <string name="contra_label">Contraseña</string>
    <string name="oklabel">Accesar</string>
    <string name="olvidolabel">Olvide Contraseña</string>
    <string name="registrolabel">Registro</string>
    <string name="app_name2">Registro</string>
    <string name="bienvenido_al_registro">Bienvenido al Registro</string>
    <string name="no">No</string>
    <string name="estudiante">Estudiante</string>
    <string name="trabajador">Trabajador</string>
    <string name="terminar_registro">Terminar registro</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="si">Si</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="sexo">Sexo</string>
    <string name="tipo_de_usuario">Tipo de Usuario</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="edad">Edad</string>
    <string name="telefono">Telefono</string>
    <string name="fecha">Fecha</string>
    <string name="usuario">Usuario</string>
    <string name="olvido_su_contrase_a">Ingresa tu usuario</string>
    <string name="felicidades_por_accesar">Felicidades por accesar</string>
    <string name="contrase_as">Contraseñas:</string>
    <string name="agregar">Agregar contraseña</string>
    <string name="eliminar">Eliminar contraseña</string>
    <string name="editar">Editar contraseña</string>
    <string name="nota">Nota: Al hacer click en la contraseña se redirigira a un mapa con la ubicacion donde registro la contraseña</string>
    <string name="nuevacontra">Ingresa la nueva contraseña</string>
    <string name="nuevacontra2">Nueva contraseña</string>
    <string name="red_social">Red social:</string>
    <string name="nuevacontra3">Agregar la nueva contraseña</string>
    <string name="termine_de_eliminar">Termine de eliminar</string>
    <string name="termine_de_editar">Termine de editar</string>
    <string name="a">a</string>
    <string name="regresar">Regresar</string>
    <string name="panel_de_config">Panel de Config</string>
    <string name="volumen">Volumen</string>
    <string name="internet">Internet</string>
    <string name="nfc">NFC</string>
</resources>